Use assertEquals() instead of Hamcrest
We have very simple assertions, there is no need to use Hamcrest here.

Change-Id: Ie3ca9a7688c1746bc7e572406475c25dee8d6dc1
Signed-off-by: Robert Varga <robert.varga@pantheon.tech>